# revenium-middleware-ollama-python

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  export_public_repo_step_2.sh  public-allowlist-python.txt  pyproject.toml
examples/: README.md  example_metadata.py  example_simple.py  example_streaming.py  getting_started.py  trace_visualization_example.py
revenium_middleware_ollama/: __init__.py  middleware.py  trace_fields.py
tests/: conftest.py  test_basic_ollama.py  test_revenium_integration_pytest.py  test_trace_visualization.py  test_transaction_id_pytest.py
